Criação da header e main

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Receitas</h1>
-    <p>Miojo da Mônica</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est voluptates magnam, in reprehenderit praesentium dicta dolores ipsum sapiente perspiciatis, similique blanditiis numquam a quod eum inventore alias omnis molestias.</p>
+    <!-- Header é o cabeçalho do site -->
+    <header>
+        <h3>Receitas Caseiras</h3>
+        <nav>
+            <ul>
+                <li> <a href="">Sobre mim</a></li>
+                <li> <a href="">Lanches</a></li>
+                <li> <a href="">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- conteúdo principal -->
+     <main>
+        <!-- primeira seção -->
+        <section>
+            <h1>Receitas  Caseiras</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat sit eum eos illo quae quas dolore hic a ad excepturi libero eligendi vitae tenetur, ea quisquam aliquam fugiat ducimus soluta?</p>
+        </section>
+     </main>
 </body>
 </html>
