seção de receitas

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             <h1>Receitas  Caseiras</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat sit eum eos illo quae quas dolore hic a ad excepturi libero eligendi vitae tenetur, ea quisquam aliquam fugiat ducimus soluta?</p>
         </section>
+        <!-- segunda seção -->
+         <section>
+            <figure>
+                <img src="https://i.pinimg.com/736x/1b/93/0f/1b930f1683ef6147ccdcc55f12e52964.jpg" alt="Cuscuz" width="500">
+                <figcaption>Cuscuz caseiro</figcaption>
+            </figure>
+         </section>
      </main>
 </body>
 </html>
